# sfml-bezier

./: CMakeLists.txt  README.md
include/math/: BSpline.hpp  Bezier.hpp  Binomial.hpp  Clamp.hpp  LinearInterpolation.hpp
include/primitives/: BezierCurve.hpp  LineStrip.hpp
src/: CMakeLists.txt  main.cpp
src/primitives/: BezierCurve.cpp  LineStrip.cpp
test/: CMakeLists.txt  TrivialTest.cpp
test/math/: MathTests.cpp
